reorganisation du code
reorganisation du code

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
             "name": "gregfn"
         }
     ],
-    "require": {},
+    "require": {
+      "symfony/console": "^6.0"
+    },
 
     "scripts": {
         "post-install-cmd": [
