--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,16 @@
             "name": "gregfn"
         }
     ],
+    "require-dev": {
+      "symfony/console": "^6.0"
+    },
     "require": {
       "symfony/console": "^6.0"
     },
 
     "scripts": {
         "post-install-cmd": [
-            "php -r \"copy('vendor/ski/src/ski-cli', 'ski-cli');\""
+            "php -r \"copy('src/ski-cli', 'ski-cli');\""
         ]
     }
 }
